# peony

./: .gitignore  .lia.cache  AGENTS.md  CLAUDE.md  Cargo.toml  MEMORY.md  README.md  bootstrap  jfc-transcript.md  self-install-peony.sh  sess.md
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/agents/: researcher.md  verifier.md
.claude/commands/: audit.md  repro.md
.claude/rules/: code-style.md  security.md  testing.md
.github/workflows/: bench.yml  ci.yml  coverage.yml
.jfc/: highlight-heights.json  tasks-history.jsonl  tasks.json
.jfc/audit/: runtime.jsonl
.jfc/compact-archive/: compact-20260617-003615-4ccf9b1d13.json
.jfc/reviews/: comments.jsonl  content-hashes.json  findings.jsonl  review_events.jsonl  runs.jsonl
.junie/: AGENTS.md
.junie/agents/: peony-researcher.md  peony-verifier.md
.junie/commands/: audit.md  repro.md
.junie/rules/: code-style.md  security.md  testing.md
.omo/run-continuation/: ses_1296ef2ffffeOiyWmYKYlf8NVs.json
bench/: BENCHMARKING.md  bench.sh  capture.sh  phase0-baseline.sh
docs/: IMPLEMENTATION_VERIFICATION_TASKS.md  INCREMENTAL_FRONTEND.md  NATIVE_LTO.md  SHARED_INPUT_POOL.md  THEOREM_TO_RUST_BRIDGES.md  VERIFICATION_CLAIMS.json  VERIFICATION_CLAIMS.md  incremental-linking-theory-research.md
docs/verification-assumptions/: README.md  (+1 more)
peony/: Cargo.toml
peony-bench/: Cargo.toml
peony-bench/benches/: hot_paths.rs
peony-bench/src/: lib.rs
peony-cache/: Cargo.toml
peony-cache/src/: lib.rs
peony-cache/tests/: partial_relink.rs
peony-emit/: Cargo.toml
peony-emit/src/: build_id.rs  eh_frame.rs  file.rs  headers.rs  input_sections.rs  input_work.rs  lib.rs  relocatable.rs  sections.rs  write_report.rs
peony-emit/src/input_work/: errors.rs  footprints.rs  ranges.rs  tests.rs
peony-emit/src/write_report/: helpers.rs  model.rs
peony-layout/: Cargo.toml
peony-layout/src/: gc.rs  icf.rs  lib.rs  script.rs
peony-layout/src/gc/: graph.rs  live.rs  parallel.rs  targets.rs  tests.rs
peony-layout/tests/: icf_bridge.rs  layout_bridge.rs  layout_gc_bridge.rs
peony-layout/tests/common/: icf.rs  layout.rs
peony-layout/tests/icf_bridge/: abi_unique.rs  address_safety.rs  malformed_addrsig.rs
peony-object/: Cargo.toml
peony-object/src/: archive.rs  arena.rs  eh_frame.rs  elf.rs  error.rs  input.rs  lib.rs  model.rs  name.rs  parse.rs  section_parse.rs  shared.rs
peony-prof/: Cargo.toml
peony-prof/src/: counters.rs  fmt.rs  lib.rs  phase.rs  rss.rs  trace.rs  trace_detail.rs  trace_fields.rs  trace_render.rs  trace_tests.rs
peony-reloc/: Cargo.toml
peony-reloc/src/: apply.rs  apply_reloc_address_tests.rs  copy.rs  dynamic.rs  lib.rs  patch_buf_tests.rs  scan.rs  tls.rs  types.rs
peony-reloc/src/apply_reloc_address_tests/: fixtures.rs  negative.rs  positive.rs
peony-reloc/src/patch_buf_tests/: overflow.rs  scalar.rs  tls.rs
peony-symbols/: Cargo.toml
peony-symbols/src/: lib.rs
peony-symbols/tests/: symbol_bridge.rs
peony-verification/: Cargo.toml
peony-verification/src/: extract.rs  gc.rs  icf.rs  incremental.rs  layout.rs  layout_extract.rs  lib.rs  model.rs  range.rs  reloc_addr.rs  reloc_byte.rs  reloc_byte_tests.rs  tests.rs
peony-verification/src/icf/: check.rs  extract.rs  model.rs  taint.rs
peony-verification/src/incremental/: error.rs
peony-verification/src/layout/: common.rs  sections.rs  segments.rs
peony-verification/src/reloc_addr/: types.rs
peony-verification/src/reloc_byte/: apply.rs  tls.rs  types.rs  write.rs
peony-verification/src/tests/: e1.rs  g1.rs  i1.rs  l1.rs  l1_malformed.rs  n1.rs  n1_real_emit.rs  n1_real_emit_fixture.rs  r1b.rs  s1.rs
peony-verification/src/tests/i1/: fixtures.rs
peony/src/: args.rs  cache_report.rs  daemon.rs  handoff.rs  inputs.rs  lto.rs  main.rs  provided_symbols.rs
peony/src/lto/: abi.rs  callbacks.rs  loader.rs  session.rs
peony/tests/: algorithms.rs  cli.rs  cpp_regressions.rs  dynamic.rs  features.rs  icf.rs  incremental.rs  link_and_run.rs  lld_corpus.rs  lto.rs  mold_corpus.rs  mold_real.rs  more_cases.rs  real_c.rs  relocatable.rs  relocations.rs  shared.rs  symbols.rs  tls.rs
peony/tests/common/: mod.rs
peony/tests/lld/: ELF.MANIFEST  README.md
research/: GAP_ANALYSIS.md  IMPLEMENTATION_STATUS.md  QUAD.md  README.md  REFERENCE_BLUEPRINT.md  SPEC.md  SPEC_AND_LITERATURE_DIGEST.md  elf-64-spec.txt  elf-spec-tis.txt  gcc-debug-fission-split-dwarf.html  huang2020-taskflow-parallel-task-graph.txt  lyu2024-detecting-build-dependency-errors.txt  maier2016-concurrent-hash-tables.txt  maskray-all-about-plt.html  maskray-implement-elf-linker.md  maskray-lld-gnu-incompatibilities.html  maskray-recent-lld-improvements.html  maskray-relocatable-linking.html  maskray-relocation-generation-assemblers.html  maskray-stack-unwinding-eh-frame.html  maskray-why-isnt-lld-faster.html  rust-blog-enabling-rust-lld-2024.html  rust-blog-lld-1.90-stable.html  rustc-dev-guide-incremental.html  rustc-dev-guide-parallel-rustc.html  smits2020-hybrid-incremental-compilers.txt  tithi2022-optimal-parallel-bfs.txt  wild-dylib-rabbit-holes.html  wild-graph-algorithms-rayon.html  wild-incremental-design.html  wild-march-update-2024.html  wild-performance-tricks.html  wild-speeding-up-edit-build-run.html  wild-speeding-up-rustc-lazy.html  wild-testing-a-linker.html  wild-update-0.6.0.html  wild-update-0.9.0.html  x86-64-sysv-abi.txt
rocq-tests/: .IncrementalSoundness.aux  .Layout.aux  .RelocDisjoint.aux  .RelocMonoid.aux  .SectionGC.aux  .SymbolLattice.aux  .lia.cache  .nia.cache  ICFSoundness.v  IncrementalCostBound.v  IncrementalSoundness.glob  IncrementalSoundness.v  IncrementalSoundness.vo  Layout.glob  Layout.v  Layout.vo  Makefile  ParallelSchedule.v  README.md  RelocDisjoint.glob  RelocDisjoint.v  RelocDisjoint.vo  RelocMonoid.glob  RelocMonoid.v  RelocMonoid.vo  SectionGC.glob  SectionGC.v  SectionGC.vo  SymbolLattice.glob  SymbolLattice.v  SymbolLattice.vo  _CoqProject  analyze.coq  check_assumptions.v  detailed_check.txt  detailed_review.py  icf_check.txt  test_proof.v
scripts/: check-verification-bridges.sh
(+90 files in other folders)
