[package]
name = "peony-object"
description = "ELF object file parsing and section/symbol extraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
object.workspace     = true
memmap2.workspace    = true
rayon.workspace      = true
rustc-hash.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
