[package]
name = "peony"
description = "Incremental parallel ELF linker — driver binary"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "peony"
path = "src/main.rs"

[dependencies]
peony-object  = { path = "../peony-object" }
peony-symbols = { path = "../peony-symbols" }
peony-layout  = { path = "../peony-layout" }
peony-reloc   = { path = "../peony-reloc" }
peony-cache   = { path = "../peony-cache" }
peony-emit    = { path = "../peony-emit" }

anyhow.workspace     = true
clap.workspace       = true
rayon.workspace      = true
rustc-hash.workspace = true
tracing.workspace    = true
tracing-subscriber.workspace = true
# Fast multi-threaded allocator (same choice mold makes). A linker is extremely
# allocation-heavy (every symbol, section, reloc); the system malloc's per-call
# mmap/brk churn shows up as page-faults dominating a small link's wall time.
mimalloc = { version = "0.1", default-features = false }
